# webcfd

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets_SAMPLE.json  Doxyfile  LICENSE  README.md  WebCFD.cpp  bootstrap.sh  notes.md  todo.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: deploy.yml
Source/: App.cpp  WebCFD.cpp  WebCFD.hpp
cmake/: ApplicationTargets.cmake  CMakeUserPresets_SAMPLE.json  DoxygenTarget.cmake  EmbedWGSL.cmake  GenerateDoxygen.cmake  ImGui.cmake  ImPlot3D.cmake
docs/: README.md  open.sh
resources/: ExampleProject.json  ProjectSchema.json
src/: App.cpp  ConfigurationError.cpp  ConfigurationError.hpp  EchoMap.cpp  EchoMap.hpp  IPanel.hpp  JSBridge.cpp  JSBridge.hpp  Logger.cpp  Logger.hpp  Object.hpp  ParametersPanel.cpp  ParametersPanel.hpp  Project.cpp  Project.hpp  RenderPanel.cpp  RenderPanel.hpp  RobotoMedium.hpp  SimulationParameters.cpp  SimulationParameters.hpp  StaticInstanceController.cpp  StaticInstanceController.hpp  SurfaceFactory.cpp  SurfaceFactory.hpp  ViewportRenderer.cpp  ViewportRenderer.hpp  WAVData.cpp  WAVData.hpp  WebCFD.cpp  WebCFD.hpp
src/actions/: ActionController.hpp  ActionControllerBase.hpp  JSActionController.cpp  JSActionController.hpp  NativeActionController.cpp  NativeActionController.hpp
src/audio/: Sensor.cpp  Sensor.hpp  Signal.cpp  Signal.hpp  WAVDataLoader.cpp  WAVDataLoader.hpp
src/errors/: ConfigurationError.cpp  LocatableError.cpp  LocatableError.hpp
src/notifications/: AddChannelMappingNotification.cpp  AddChannelMappingNotification.hpp  AllNotifications.hpp  CancelProjectLoadNotification.hpp  CompleteProjectLoadNotification.cpp  CompleteProjectLoadNotification.hpp  ModifySensorColourNotification.cpp  ModifySensorColourNotification.hpp  ModifySensorPositionNotification.cpp  ModifySensorPositionNotification.hpp  ProjectSelectedNotification.hpp  RegisterVFSMappingNotification.cpp  RegisterVFSMappingNotification.hpp
src/objects/: BidirectionalUnorderedMapping.hpp  FrequencySpectrum.cpp  FrequencySpectrum.hpp  FrequencySpectrumFactory.cpp  FrequencySpectrumFactory.hpp  IDAllocator.hpp  Object.hpp  Project.cpp  Project.hpp  Sensor.cpp  Sensor.hpp  Signal.cpp  Signal.hpp  SignalFactory.cpp
src/objects/factories/: FFTWBuffers.cpp  FFTWBuffers.hpp  FrequencySpectrumFactory.cpp  FrequencySpectrumFactory.hpp  SignalFactory.cpp  SignalFactory.hpp  WindowFunctions.cpp  WindowFunctions.hpp
src/objects/persistence/: ISerialiser.hpp  JSONDeserialiser.cpp  JSONDeserialiser.hpp  JSONSerialiser.cpp  JSONSerialiser.hpp  SignalFactory.cpp  SignalFactory.hpp
src/panels/: ArrayViewPanel.cpp  ArrayViewPanel.hpp  ChannelMappingPanel.cpp  ChannelMappingPanel.hpp  ErrorModal.cpp  ErrorModal.hpp  IPanel.hpp  IndividualUploadModal.cpp  IndividualUploadModal.hpp  MenuPanel.cpp  MenuPanel.hpp  NativeFileChooser.cpp  NativeFileChooser.hpp  ProjectPanel.cpp  ProjectPanel.hpp  SensorGeometryPanel.cpp  SensorGeometryPanel.hpp  SignalDFTPanel.cpp  SignalDFTPanel.hpp  SignalWaveformPanel.cpp  SignalWaveformPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
src/shaders/: aurora.wgsl  vortex.wgsl
src/signals/: ResultChannel.hpp  ThreadSafeQueue.hpp  Worker.cpp  Worker.hpp  WorkerResultDespatcher.cpp  WorkerResultDespatcher.hpp
src/signals/lightweight/: CompleteProjectLoadNotification.hpp  ModifySensorPositionTask.hpp  RegisterVFSMappingNotification.hpp  WaveFileLoadRequest.hpp
src/signals/results/: DFTResult.cpp  DFTResult.hpp  DownsampleResult.cpp  DownsampleResult.hpp  ErrorResult.cpp  ErrorResult.hpp  LoadProjectResult.cpp  LoadProjectResult.hpp  LoadSignalFileResult.cpp  LoadSignalFileResult.hpp  WorkerResult.hpp
src/signals/tasks/: DFTTask.cpp  DFTTask.hpp  DownsampleTask.cpp  DownsampleTask.hpp  ITask.cpp  ITask.hpp  LoadProjectTask.cpp  LoadProjectTask.hpp  LoadSignalFileTask.cpp  LoadSignalFileTask.hpp
src/tasks/: DFTResult.cpp  DFTResult.hpp  DFTTask.cpp  DFTTask.hpp  DownsampleResult.cpp  DownsampleResult.hpp  DownsampleTask.cpp  DownsampleTask.hpp  ErrorResult.cpp  ErrorResult.hpp  IResult.hpp  IResultHandler.hpp  ITask.cpp  ITask.hpp  LoadProjectResult.cpp  LoadProjectResult.hpp  LoadProjectTask.cpp  LoadProjectTask.hpp  LoadWaveFileTask.cpp  LoadWaveFileTask.hpp  ScopedConnections.cpp  ScopedConnections.hpp  ThreadSafeQueue.hpp  Worker.cpp  Worker.hpp  WorkerResult.hpp  WorkerResultDespatcher.cpp  WorkerResultDespatcher.hpp
src/tasks/lightweight/: AddChannelMappingTask.hpp  ModifySensorColourTask.hpp
src/utility/: Colour.hpp  FilesystemCombo.cpp  FilesystemCombo.hpp  Position.hpp  VariantHelpers.hpp
src/web/: JSBridge.cpp  JSBridge.hpp  module.js  shell.html
vcpkg-overlay/: README.md
vcpkg-overlay/imgui/: imconfig.h  portfile.cmake
vcpkg-overlay/implot3d/: portfile.cmake  vcpkg.json
vcpkg-overlay/simdjson/: portfile.cmake
